--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=qismet20
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.mail.host=smpt.gmail.com
+spring.mail.host=smtp.gmail.com
 spring.mail.username=qismet600@gmail.com
 spring.mail.password=bnyo tyzx plyp qwfd
 spring.mail.properties.mail.transport.protocol=smtp
