--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.mail.properties.mail.smtp.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+# Swagger
+springdoc.api-docs.path=/v1/api-docs
+springdoc.swagger-ui.path=/v1/swagger-ui
