--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.27'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
+ 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
