--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=qismet20
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.username=qismet600@gmail.com
